fix(UP-118): Fix Color Swatches bug purple not showing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1445,6 +1445,7 @@ a.btn.white {
 
 .color-selected {
     border: 4px solid black !important;
+    outline: 2px dashed red !important;
 }
 
 #color-swatches #proceed {
@@ -2340,6 +2341,10 @@ a.btn.white {
 
 .cart-color-details-tr {
     display: table-row;
+}
+
+.mt-0 {
+    margin-top: 0px !important;
 }
 
 @media only screen and (max-width: 767px) {
